# chainz

./: CMakeLists.txt  README.md
include/: block.h
src/: block.c  main.c
test/: general.c
